# ckanext-mytheme-professional

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/mytheme/: cli.py  helpers.py  plugin.py  views.py
ckanext/mytheme/assets/: script.js  webassets.yml
ckanext/mytheme/logic/: action.py  auth.py  schema.py  validators.py
ckanext/mytheme/public/: custom.css
ckanext/mytheme/templates/: base.html  footer.html  header.html  page.html
ckanext/mytheme/templates/home/: index.html
ckanext/mytheme/templates/home/snippets/: about_text.html  benefits.html  categories.html  promoted.html  search.html
ckanext/mytheme/templates/organization/: about.html  edit_base.html  read.html  read_base.html
ckanext/mytheme/templates/organization/snippets/: helper.html  info-organizations.html  info.html  organization_item.html
ckanext/mytheme/templates/package/: new_view.html  read.html  read_base.html  search.html
ckanext/mytheme/templates/package/snippets/: additional_info.html  resource_item.html  resource_view.html  resources.html  resources_list.html  tags.html
ckanext/mytheme/templates/snippets/: additional_info.html  facet_list.html  language_selector.html  license.html  package_item.html  search_form.html  search_result_text.html
ckanext/mytheme/templates/user/: login.html  new.html  new_user_form.html
ckanext/mytheme/templates/user/snippets/: login_form.html
ckanext/mytheme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/mytheme/tests/logic/: test_action.py  test_auth.py  test_validators.py
